--- a/.prow/config.yaml
+++ b/.prow/config.yaml
@@ -2,21 +2,21 @@ prowjob_namespace: default
 pod_namespace: test-pods
 
 plank:
-  allow_cancellations: true
   job_url_prefix: http://prow.feast.ai/view/gcs
   report_template: '[Full PR test history](https://prow.feast.ai/pr-history?org={{.Spec.Refs.Org}}&repo={{.Spec.Refs.Repo}}&pr={{with index .Spec.Refs.Pulls 0}}{{.Number}}{{end}})'
-  default_decoration_config:
-    timeout: 7200000000000    # 2h
-    grace_period: 15000000000 # 15s
-    utility_images:
-      clonerefs: gcr.io/k8s-prow/clonerefs:v20190221-d14461a
-      initupload: gcr.io/k8s-prow/initupload:v20190221-d14461a
-      entrypoint: gcr.io/k8s-prow/entrypoint:v20190221-d14461a
-      sidecar: gcr.io/k8s-prow/sidecar:v20190221-d14461a
-    gcs_configuration:
-      bucket: feast-templocation-kf-feast
-      path_strategy: explicit
-    gcs_credentials_secret: prow-service-account
+  default_decoration_configs:
+    "*":
+      timeout: 7200000000000    # 2h
+      grace_period: 15000000000 # 15s
+      utility_images:
+        clonerefs: gcr.io/k8s-prow/clonerefs:v20190221-d14461a
+        initupload: gcr.io/k8s-prow/initupload:v20190221-d14461a
+        entrypoint: gcr.io/k8s-prow/entrypoint:v20190221-d14461a
+        sidecar: gcr.io/k8s-prow/sidecar:v20190221-d14461a
+      gcs_configuration:
+        bucket: feast-templocation-kf-feast
+        path_strategy: explicit
+      gcs_credentials_secret: prow-service-account
 
 deck:
   tide_update_period: 1s
@@ -131,8 +131,19 @@ presubmits:
         - name: service-account
           mountPath: "/etc/service-account"
 
-# TODO: do a release when a git tag is pushed
-#
-# postsubmits list Prow jobs that run on every push 
-# postsubmits:
-#   gojek/feast:
+postsubmits:
+  gojek/feast:
+  - name: release-automation-dry-run
+    decorate: true        
+    spec:
+      containers:
+      - image: python:3
+        command:
+        - sh
+        - -c 
+        - |
+          git status
+          git log -3
+          cat README.md
+    branches:
+    - release-automation-dry-run
