--- a/.prow/config.yaml
+++ b/.prow/config.yaml
@@ -160,15 +160,11 @@ postsubmits:
         - sh 
         - -c 
         - |
-          pwd
-          ls -lah
-          ls -lah .prow/scripts/
           .prow/scripts/publish_python_sdk.sh \
-            --directory_path sdk/python \
-            --repository testpypi
+            --directory_path sdk/python --repository testpypi
         env:
         - name: SETUPTOOLS_SCM_PRETEND_VERSION
-          value: 1.0.1
+          value: 1.0.2
         volumeMounts:
         - name: pypirc 
           mountPath: /root/.pypirc
