--- a/.prow/config.yaml
+++ b/.prow/config.yaml
@@ -161,7 +161,7 @@ postsubmits:
         - -c 
         - |
           .prow/scripts/publish_python_sdk.sh \
-            --directory_path sdk/python --repository testpypi
+            --directory_path sdk/python --repository pypi
         volumeMounts:
         - name: pypirc 
           mountPath: /root/.pypirc
@@ -172,7 +172,9 @@ postsubmits:
         secret:
           secretName: pypirc
     branches:
-    - release-automation-dry-run
+    # Filter on tags with semantic versioning, prefixed with "v"
+    # https://github.com/semver/semver/issues/232
+    - ^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(-(0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(\.(0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*)?(\+[0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*)?$
 
   - name: publish-docker-images
     decorate: true 
@@ -190,13 +192,13 @@ postsubmits:
           if [ $PULL_BASE_REF == "master" ]; then 
           
           .prow/scripts/publish_docker_image.sh \
-            --repository gcr.io/kf-feast/test-core \
+            --repository gcr.io/kf-feast/feast-core \
             --tag dev \
             --file infra/docker/core/Dockerfile \
             --google_service_account_file /etc/gcloud/service-account.json
           
           .prow/scripts/publish_docker_image.sh \
-            --repository gcr.io/kf-feast/test-serving \
+            --repository gcr.io/kf-feast/feast-serving \
             --tag dev \
             --file infra/docker/serving/Dockerfile \
             --google_service_account_file /etc/gcloud/service-account.json
@@ -204,23 +206,23 @@ postsubmits:
           else
           
           .prow/scripts/publish_docker_image.sh \
-            --repository gcr.io/kf-feast/test-core \
+            --repository gcr.io/kf-feast/feast-core \
             --tag ${PULL_BASE_REF:1} \
             --file infra/docker/core/Dockerfile \
             --google_service_account_file /etc/gcloud/service-account.json
 
           
           .prow/scripts/publish_docker_image.sh \
-            --repository gcr.io/kf-feast/test-serving \
+            --repository gcr.io/kf-feast/feast-serving \
             --tag ${PULL_BASE_REF:1} \
             --file infra/docker/serving/Dockerfile \
             --google_service_account_file /etc/gcloud/service-account.json
 
-          docker tag gcr.io/kf-feast/test-core:${PULL_BASE_REF:1} gcr.io/kf-feast/test-core:latest
-          docker push gcr.io/kf-feast/test-core:latest
+          docker tag gcr.io/kf-feast/feast-core:${PULL_BASE_REF:1} gcr.io/kf-feast/feast-core:latest
+          docker push gcr.io/kf-feast/feast-core:latest
 
-          docker tag gcr.io/kf-feast/test-serving:${PULL_BASE_REF:1} gcr.io/kf-feast/test-serving:latest
-          docker push gcr.io/kf-feast/test-serving:latest
+          docker tag gcr.io/kf-feast/feast-serving:${PULL_BASE_REF:1} gcr.io/kf-feast/feast-serving:latest
+          docker push gcr.io/kf-feast/feast-serving:latest
 
           fi
         volumeMounts:
@@ -240,4 +242,31 @@ postsubmits:
         secret:
           secretName: feast-service-account
     branches:
-    - release-automation-dry-run
+    - ^master$
+    - ^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(-(0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(\.(0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*)?(\+[0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*)?$
+
+  - name: publish-helm-chart
+    decorate: true 
+    spec:
+      containers:
+      - image: google/cloud-sdk:273.0.0:slim
+        command:
+        - bash
+        - -c
+        - |
+          gcloud auth activate-service-account --key-file /etc/gcloud/service-account.json
+          curl -s https://get.helm.sh/helm-v2.16.1-linux-amd64.tar.gz | tar -C /tmp -xz
+          mv /tmp/linux-amd64/helm /usr/bin/helm
+          helm init --client-only
+          .prow/scripts/sync-helm-charts.sh
+        volumeMounts:
+        - name: service-account
+          mountPath: /etc/gcloud/service-account.json
+          subPath: service-account.json
+          readOnly: true
+      volumes:
+      - name: service-account
+        secret:
+          secretName: feast-service-account
+    branches:
+    - ^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(-(0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(\.(0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*)?(\+[0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*)?$
